WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283137
Fix currentMemory type in WasmOMGIRGenerator32_64.cpp
https://bugs.webkit.org/show_bug.cgi?id=283137
Summary
Fix currentMemory type in WasmOMGIRGenerator32_64.cpp
Angelos Oikonomopoulos
Reported
2024-11-14 14:53:02 PST
The value does not need to be truncated. This results in a later type mismatch.
Attachments
Add attachment
proposed patch, testcase, etc.
Angelos Oikonomopoulos
Comment 1
2024-11-14 14:55:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36661
EWS
Comment 2
2024-11-14 18:45:11 PST
Committed
286624@main
(1b0ca739c27e): <
https://commits.webkit.org/286624@main
> Reviewed commits have been landed. Closing PR #36661 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-14 18:46:15 PST
<
rdar://problem/139931837
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug