Fix currentMemory type in WasmOMGIRGenerator32_64.cpp https://bugs.webkit.org/show_bug.cgi?id=283137

Reviewed by Justin Michaud.

The value is already of the right B3 type on 32-bits and does not need
to be truncated.

* Source/JavaScriptCore/wasm/WasmOMGIRGenerator32_64.cpp:
(JSC::Wasm::OMGIRGenerator::addCurrentMemory):

Canonical link: https://commits.webkit.org/286624@main